# crolin-zhang

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  format_code.sh  main.c  test_thread_pool.c  thread_pool.c  thread_pool.h
cmake/templates/: version.h.in
cmake/toolchains/: mips-linux-gnu.cmake
docs/: README.md  api_reference.md  architecture.md  ide_integration.md  project_overview.md  test_report.md  user_guide.md
examples/: CMakeLists.txt  thread_pool_example.c
examples/log/: CMakeLists.txt  log_advanced_example.c  log_basic_example.c
examples/thread/: CMakeLists.txt  thread_example.c
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/log/: CMakeLists.txt
src/core/log/include/: log.h
src/core/log/src/: log.c
src/core/thread/: CMakeLists.txt
src/core/thread/include/: thread.h
src/core/thread/src/: thread.c  thread_internal.h
tests/: CMakeLists.txt  test_thread_pool.c
tests/modules/: CMakeLists.txt
tests/modules/log/src/: CMakeLists.txt  log_unit_test.c
tests/modules/thread/src/: CMakeLists.txt  thread_unit_test.c
thread/: CMakeLists.txt
thread/examples/: CMakeLists.txt
thread/include/: thread.h
thread/src/: thread.c  thread_internal.h
thread/tests/: CMakeLists.txt
tools/: CMakeLists.txt
